--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
         android:id="@+id/btnModificar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MOSTRAR" />
+        android:text="MODIFICAR" />
 
     <LinearLayout
         android:layout_width="match_parent"
