--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,14 @@
         android:inputType="textPersonName" />
 
     <EditText
+        android:id="@+id/editContraseña"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Comtraseña:"
+        android:inputType="textPersonName" />
+
+    <EditText
         android:id="@+id/editTextDireccionUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
