--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,98 +8,57 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
+        android:layout_height="37dp" />
+
+    <Button
+        android:id="@+id/btnMiPerfil"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="NUEVO USUARIO"
-        android:textAlignment="center"
-        android:textSize="24sp" />
+        android:text="MI PERFIL" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+    <Button
+        android:id="@+id/btnMisProductos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="MIS PRODUCTOS" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.00" />
-
-    <EditText
-        android:id="@+id/editUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Usuario:"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editTextNombreUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.00"
-        android:ems="10"
-        android:hint="Nombre:"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editTextApellidosUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.00"
-        android:ems="10"
-        android:hint="Apellidos:"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editTextCorreoUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.00"
-        android:ems="10"
-        android:hint="Correo:"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editContraseña"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Comtraseña:"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editTextDireccionUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.00"
-        android:ems="10"
-        android:hint="Direccion:"
-        android:inputType="textPersonName" />
+        android:layout_height="50dp" />
 
     <Button
-        android:id="@+id/btnNuevoUsuario"
+        android:id="@+id/btnUsuarios"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.00"
-        android:text="ENVIAR" />
+        android:text="USUARIOS" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 
     <Button
-        android:id="@+id/btnModificar"
+        android:id="@+id/btnProductos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MODIFICAR" />
+        android:text="PRODUCTOS" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/textView7"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.00"
-        android:orientation="horizontal">
+        android:layout_height="50dp" />
 
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnCerrarSesion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="CERRAR SESIÓN" />
 </LinearLayout>
