--- a/app/src/main/res/layout/activity_nuevo_producto.xml
+++ b/app/src/main/res/layout/activity_nuevo_producto.xml
@@ -77,6 +77,12 @@
         android:layout_height="wrap_content"
         android:text="MODIFICAR" />
 
+    <Button
+        android:id="@+id/btnEliminarProducto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Eliminar" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
